// Vitest Snapshot v1

exports[`ShowCard > should render full card image 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\"><img class=\\"w-full h-full group-hover:scale-102 transition-250\\" src=\\"http://thisisanimage.com/\\" alt=\\"Under the Dome\\">
      <!--v-if--><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <div class=\\"flex items-center mb-1 last:mb-0 color-gray-300 position-absolute bottom-2 left-2\\"><span class=\\"i-carbon-star-filled color-yellow mr-1\\"></span><span>23</span></div>
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <div class=\\"text-gray-400 text-xs overflow-hidden text-ellipsis text-clip h-12\\">Under the Dome is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome.</div>
    </div>
  </a></div>"
`;

exports[`ShowCard > should render show card 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\">
      <!--v-if--><img class=\\"w-full h-full group-hover:scale-102 transition-250 object-cover\\" src=\\"https://images.unsplash.com/photo-1461151304267-38535e780c79?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=300&amp;q=100\\" alt=\\"No image for Under the Dome\\"><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <!--v-if-->
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <!--v-if-->
    </div>
  </a></div>"
`;

exports[`ShowCard > should render show card image 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\"><img class=\\"w-full h-full group-hover:scale-102 transition-250\\" src=\\"http://thisisanimage.com/\\" alt=\\"Under the Dome\\">
      <!--v-if--><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <!--v-if-->
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <!--v-if-->
    </div>
  </a></div>"
`;

exports[`ShowCard > should render show card image not found 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\">
      <!--v-if--><img class=\\"w-full h-full group-hover:scale-102 transition-250 object-cover\\" src=\\"https://images.unsplash.com/photo-1461151304267-38535e780c79?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=300&amp;q=100\\" alt=\\"No image for Under the Dome\\"><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <!--v-if-->
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <!--v-if-->
    </div>
  </a></div>"
`;

exports[`ShowCard > should render show card rating 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\">
      <!--v-if--><img class=\\"w-full h-full group-hover:scale-102 transition-250 object-cover\\" src=\\"https://images.unsplash.com/photo-1461151304267-38535e780c79?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=300&amp;q=100\\" alt=\\"No image for Under the Dome\\"><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <div class=\\"flex items-center mb-1 last:mb-0 color-gray-300 position-absolute bottom-2 left-2\\"><span class=\\"i-carbon-star-filled color-yellow mr-1\\"></span><span>23</span></div>
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <!--v-if-->
    </div>
  </a></div>"
`;

exports[`ShowCard > should render show card summary 1`] = `
"<div class=\\"h-full rounded-xl overflow-hidden group bg-primary-500 hover:bg-primary-400 transition-250\\"><a to=\\"/title/23\\" class=\\"h-full\\">
    <div class=\\"image-container aspect-[42/59] relative overflow-hidden\\">
      <!--v-if--><img class=\\"w-full h-full group-hover:scale-102 transition-250 object-cover\\" src=\\"https://images.unsplash.com/photo-1461151304267-38535e780c79?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=300&amp;q=100\\" alt=\\"No image for Under the Dome\\"><span class=\\"overlay bg-gradient-to-t from-primary-900 via-transparent\\"></span>
      <!--v-if-->
    </div>
    <div class=\\"p-2 pointer-events-none\\">
      <p class=\\"heading font-secondary font-semibold md:text-l mb-2 font-bold truncate\\">Under the Dome</p>
      <div class=\\"text-gray-400 text-xs overflow-hidden text-ellipsis text-clip h-12\\">
        <p>Under the Dome is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome.</p>
      </div>
    </div>
  </a></div>"
`;
